--- a/src/templates/blogPost.module.scss
+++ b/src/templates/blogPost.module.scss
@@ -1,61 +1,20 @@
 .content {
-  font-size: 23px;
-  margin: 39px 0 10px;
-  text-align: center;
-}
-.posts {
-  list-style-type: none;
-  margin-top: 0;
-  position: relative;
-  padding-bottom: 33px;
-  top: -9px;
-  left: -21px;
-  text-align: left;
-  margin-bottom: 15px;
-}
-.post {
-  padding-bottom: 7px;
-  position: relative;
-  top: 58px;
-  &:last-child {
-    padding-bottom: 0;
-  }
-  h2 {
+  h1 {
     font-size: 24px;
-    margin: 0 0 10px;
+    margin: 39px 0 10px;
     text-align: center;
-    a {
-      color: #202020;
-      font-size: 19px;
-    }
   }
 }
 .meta {
-  font-size: 16px;
+  font-size: 15px;
+  display: block;
   text-align: center;
   font-weight: 300;
   margin-bottom: 20px;
 }
 .featured {
-  max-height: 330px;
-}
-.excerpt {
-  margin: 30px 0 15px;
-  font-weight: 300;
-  letter-spacing: 0.02em;
-}
-.button {
-  font-size: 15px;
-  font-weight: 300;
-  text-align: center;
-  padding: 20px 0;
-  a {
-    color: #555;
-    border: 2px solid black;
-    &:hover {
-      color: #164bc5;
-      border-color: #222;
-      background-color: #222;
-    }
-  }
+  max-height: 800px;
+  max-width: 1000px;
+  margin-bottom: 25px;
+
 }
